# usb-hid-descriptor-parser-cli

./: Cargo.toml  LICENSE  README.md
src/: main.rs
