[package]
name = "usb_hid_descriptor_parser_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusb = "0.9"
# usb_hid_descriptor_parser = { git = "ssh://git@github.com:kolbeck-jabra/usb-hid-descriptor-parser.git" }
usb_hid_descriptor_parser = { path = "../usb-hid-descriptor-parser" }
